cilium_netpolicy_examples/cilium51/CiliumNetworkPolicy32.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "l4-rule"
spec:
  endpointSelector:
    matchLabels:
      app: myService
  egress:
    - toPorts:
      - ports:
        - port: "80"
          protocol: TCP


# The following rule limits all endpoints with the label app=myService 
# to only be able to emit packets using TCP on port 80, to any layer 3 destination:
